--- a/speak out.html
+++ b/speak out.html
@@ -18,7 +18,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image:url("file:///C:/Users/sourya/Desktop/IES/mic2.jpg");
+  background-image:url("https://github.com/Sourya2000/Sourya2000.github.io/blob/master/pic/mic2.jpg");
   height:90%
 }
 
@@ -110,7 +110,7 @@ body, html {
 <!-- Work Section -->
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-    <img src="file:///C:/Users/sourya/Desktop/IES/mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+    <img src="https://github.com/Sourya2000/Sourya2000.github.io/blob/master/pic/mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
     </div>
 </div>
     
