--- a/speak out.html
+++ b/speak out.html
@@ -57,7 +57,7 @@ body, html {
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:35px">
     <span class="w3-jumbo w3-hide-small">Welcome to Speakout</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Welcome to Speak out</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium"><b><i>Welcome to Speak out</i></b></span><br>
     <span class="w3-large">Let's stop wasting the precious time and learn spoken english online </span>
     <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoZcXVqbmr3eKljxwCYHBLW23w0RLCYi6rT2_IiDSRU6OQ_A/viewform?usp=sf_link" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Join us</a></p>
     
