--- a/speak out.html
+++ b/speak out.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <head>
 <title>Speak out- Be an eloquent speaker</title>
 <meta charset="UTF-8">
   <meta name="google-site-verification" content="etQI2Luv3p7TH6wRRr-uuoZqfjCyra-YLe4F_FW0RCg" />
@@ -7,6 +8,7 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
