--- a/speak out.html
+++ b/speak out.html
@@ -62,7 +62,7 @@ body, html {
     <span class="w3-jumbo w3-hide-small">Welcome to Speakout</span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium"><b><i>Welcome to Speak out</i></b></span><br>
     <span class="w3-large">Let's stop wasting the precious time and learn spoken english online </span>
-    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoZcXVqbmr3eKljxwCYHBLW23w0RLCYi6rT2_IiDSRU6OQ_A/viewform?usp=sf_link" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Join us</a></p>
+    <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSfoZcXVqbmr3eKljxwCYHBLW23w0RLCYi6rT2_IiDSRU6OQ_A/viewform?usp=sf_link" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Get a qoute</a></p>
     
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
