--- a/speak out.html
+++ b/speak out.html
@@ -2,10 +2,8 @@
 <html>
   <head>
 <title>Speak out- Be an eloquent speaker</title>
-   meta charset="UTF-8">
+   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="etQI2Luv3p7TH6wRRr-uuoZqfjCyra-YLe4F_FW0RCg" />
-    <a href="Sourya2000.github.io/verification.txt"</a>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
